# alwin-voice

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/alwin_voice/: __init__.py  agent.py  interrupts.py  main.py  unitree_utils.py
src/alwin_voice/audio/: __init__.py  backends.py  player.py  recorder.py
src/alwin_voice/config/: settings.py
src/alwin_voice/llm/: __init__.py  client.py  context.py
src/alwin_voice/stt/: __init__.py  transcriber.py
src/alwin_voice/tts/: __init__.py  backends.py  chatterbox_engine.py  piper_engine.py  worker.py
tests/: test_audio_backends.py  test_chatterbox_engine.py  test_context.py  test_interrupts.py  test_llm_client.py  test_main_audio_selftest.py  test_main_barge_in.py  test_piper_engine.py  test_settings.py  test_tts_backends.py
